additional images and edits

--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
     <header>
         <div class="header_container">
         <nav><ul class="nav">
+            <div class="menu">
             <li class="nav_list"><a class="nav" href="doc/bvollner_researchPlan.pdf" alt="Research Plan">RESEARCH</a></li>
             <li class="nav_list"><a class="nav" href="doc/STEPS_citations.pdf" alt="Citations">CITATIONS</a></li>
-            <li class="nav_list"><a class="nav" href="https://vollnerb.wixsite.com/capstoneprogress">BLOG</a></li>
+            <li class="nav_list"><a class="nav" href="https://vollnerb.wixsite.com/capstoneprogress" alt="Blog">BLOG</a></li>
+        </div>
         </ul></nav>
         </div>
     </header>
@@ -41,7 +43,7 @@
         <div class="clatsop_images">
     <figure>
     <img id="column_view" src="img/column_view.JPG" alt="View from the Astoria Column">
-    <figcaption>A view of Astoria, OR overlooking the Columbia River</figcaption>
+    <figcaption>A view of Astoria, OR overlooking the Columbia River. <em>Photo by the author</em></figcaption>
 </figure>
     <figure>
     <img src="img/clatsop_map.png" alt="Map of Clatsop County">
@@ -50,7 +52,7 @@
 </div>
     <div class="clatsop_text_div">
     <h2>A locally inspired response to a national problem…</h2>
-    <p>Clatsop County, Oregon is a picturesque corner of the Pacific Northwest. With a population of over 40,000 full time residents and covering 828 square miles of land<sup>2</sup>. As figure 1 shows, it is home to the cities of Seaside and Astoria. Both of which rely heavily on tourism for their local economies. Astoria alone hosts 125,000 tourists annually.<sup>3</sup>  With this many citizens and visitors spread out over such a large area, there are only two 25 bed local hospitals <em>(fig. 1, locations circled by the author)</em> to render aid in the case of an emergency. That is only 1 hospital bed per 836 residents. The lack of resources is only compounded by its geographic isolation. Many patients end up needing to be evacuated to Portland for more extensive treatment.</p>    
+    <p>Clatsop County, Oregon is a picturesque corner of the Pacific Northwest. With a population of over 40,000 full time residents and covering 828 square miles of land<sup>2</sup>. As figure 1 shows, it is home to the cities of Seaside and Astoria. Both of which rely heavily on tourism for their local economies. Astoria alone hosts 125,000 tourists annually.<sup>3</sup>  With this many citizens and visitors spread out over such a large area, there are only two 25 bed local hospitals <em>(Figure 1, locations circled by the author)</em> to render aid in the case of an emergency. That is only 1 hospital bed per 836 residents. The lack of resources is only compounded by its geographic isolation. Many patients end up needing to be evacuated to Portland for more extensive treatment.</p>    
     <p>These realities coupled with the rise in mass shootings and prevalence of natural disasters has created circumstances that may need to be addressed before professional care can be offered. It takes an average of 7-10 minutes for first responders to reach the scene of an emergency, but someone who has severe trauma can bleed out in as little as 5 minutes.<sup>4</sup></p>    
     <p>STEPS stands for Severe Trauma & Emergency Protocol System. It is meant to give untrained bystanders the ability to provide first aid to a victim in those crucial moments before help arrives. 
         </p>
@@ -61,12 +63,12 @@
     <section>
         <div class="section_container">
         <h2>Finding a baseline and researching opportunities</h2>
+        <figure id="training">
+            <img id="training_pic" src="img/training.png" alt="Stop The Bleed Training">
+            <figcaption>Figure 2. Individuals participating in Stop The Bleed training</figcaption>
+            </figure>
+        <p>The question of how to prepare people for these situations is not a new one. There are other organizations who have developed first aid training programs for the general public. Stop The Bleed was created as a civilian response to trauma using military tourniquet training and research. This life-saving training was developed by the Departments of Defense and Homeland Security, and the American College of Surgeons.<sup>5</sup> <a href="https://www.stopthebleed.org/">Stop The Bleed</a> training has had over 130,000 courses and taught 2.4 million participants what to do in case of an emergency.<sup>6</sup> It has pursued legislative action to put its bleeding control kits into public spaces alongside Automated External Defibrillators since its inception in 2017.<sup>7</sup> The Red Cross has partnered with Stop the Bleed and developed a curriculum that was specifically created for high school students. FAST <a href="https://www.redcross.org/take-a-class/first-aid/first-aid-training/first-aid-classes/fast-training">(First Aid for Severe Trauma)</a> makes its digital resources available for anyone under the age of 19 for free.<sup>8</sup></p>
         
-        <p>The question of how to prepare people for these situations is not a new one. There are other organizations who have developed first aid training programs for the general public. Stop The Bleed was created as a civilian response to trauma using military tourniquet training and research. This life-saving training was developed by the Departments of Defense and Homeland Security, and the American College of Surgeons.<sup>5</sup> Stop The Bleed training has had over 130,000 courses and taught 2.4 million participants what to do in case of an emergency.<sup>6</sup> It has pursued legislative action to put its bleeding control kits into public spaces alongside Automated External Defibrillators since its inception in 2017.<sup>7</sup> The Red Cross has partnered with Stop the Bleed and developed a curriculum that was specifically created for high school students. FAST <a href="https://www.redcross.org/take-a-class/first-aid/first-aid-training/first-aid-classes/fast-training">(First Aid for Severe Trauma)</a> makes its digital resources available for anyone under the age of 19 for free.<sup>8</sup>  <a href="#!">Again with links to their respective organizations</a></p>
-        <figure id="stb_logo">
-        <img src="img/logo_stopthebleed.jpg" alt="Stop The Bleed Logo">
-        <figcaption>Figure 2. Stop The Bleed's logo</figcaption>
-        </figure>
         <p>As noble as both of these organizations are, their usefulness in an emergency requires a person to be trained beforehand. <em>They are proactive, not reactive.</em> Until their impact becomes so widespread that it is common knowledge, there is an opportunity to create something to help people in the moment, during a crisis. </p>
         <p>These themes have been the focus of my work as a graduate student, and the research for this project was started in earlier semesters. As a high school teacher, I used my classroom to explore the abilities and predispositions of my students and fellow faculty. There were limitations to what I was able to do, but I was still able to draw some significant conclusions. I found that the vast majority had cell phones, internet access, and would look up what to do online, but many of them did not know how to react in a crisis after calling 911. Additionally, a small group of students were asked to participate in a role-playing exercise where they needed to give first aid. While each of them dressed the wound, they were more concerned with cleaning it, rather than stopping the “bleeding”. <a href="doc/bvollner_researchPlan.pdf" alt="Research Plan">You can see the breakdown of these results in my research</a></p>
         </div>
@@ -74,18 +76,30 @@
 
     <section><div class="section_container">
         <h2>Finding the best answer to a terrible question</h2>
+        <figure id="bleed_kit">
+            <img src="img/bleed_kit.png" alt="Bleeding Control Kit Mockup">
+            <figcaption>Figure 3.A A bleeding control kit mockup</figcaption>
+        </figure>
+        <p>The dilemma that we are facing is how to provide the first aid training immediately, especially in those crucial moments before first responders arrive. Until <a href="https://www.stopthebleed.org/">Stop the Bleed</a> and FAST’s missions are so widespread that they become common knowledge, we have the obligation to create a means of immediate response to crises that can reach the widest demographic possible.</p>
+        <p>In order to build off of what <a href="https://www.stopthebleed.org/">Stop the Bleed</a> and <a href="https://www.redcross.org/take-a-class/first-aid/first-aid-training/first-aid-classes/fast-training">FAST</a> have created, STEPS is a shift from a proactive to the reactive approach. Using a smartphone as a delivery device, diagnostic first aid instructions can be delivered immediately, and by leveraging GPS coordinates and/or IP addresses, authorities could be alerted without distracting the user. This way they can focus on rendering first aid to the victim. </p>
+        <p>By accessing STEPS with a QR code <em>(Figures 3.A and 3.B)</em>, connection to instruction is immediate. If there is no internet service, the placard itself has illustrated instructions on how to use a tourniquet and perform Hands–Only CPR.</p>
         <h3>Questions of Accessibility</h3>
-        <p>It seems that we have a real opportunity to impact these situations with smart phones, but just because the technology to create such a system is available does not mean that we all have equal access to it. Our own individual circumstances frame how we interact with technology and the world as a whole. In an emergency, there are different factors that should be considered to make sure that this resource can reach the widest possible demographic.</p>
+        <figure id="bleed_kit">
+            <img src="img/layout_full.jpg" alt="Placard Layout">
+            <figcaption>Figure 3.B QR Placard with Instructions</figcaption>
+        </figure>
+        <p>We have a real opportunity to address crisis with smart phones, but just because the technology exists does not mean that we all have equal access to it. Our own individual circumstances frame how we interact with technology and the world as a whole. In an emergency, there are different factors that should be considered to make sure that this resource can reach the widest possible demographic.</p>
         <ul>
             <li><h4>A Simple Color Scheme:</h4> The lack of distraction will allow the user to focus on the task at hand as much as possible. Contrasting colors will allow users with visual disabilities to more easily understand graphics and read text.</li>
             <li><h4>Clear, Concise Text:</h4> 130 million American adults lack a basic reading proficiency, reading at or less than a 6th grade level.<sup>8</sup> Somewhere between 5 and 15% of the American population (or between 14.5 and 43.5 million people) suffer from dyslexia.<sup>9</sup> Instructions should be written with simple language in a readable, ADA compliant typeface.</li>
             <li><h4>Visual Cues and Pictograms:</h4> By adding illustrations wherever possible, the communication of instruction can increase the access of vulnerable populations. Additionally, because 1 in 5 Americans speak a language other than English at home<sup>10</sup>, any difficulties with limited vocabulary can be visually reinforced.</li>
             <li><h4>Large Interactive Icons and Buttons:</h4> While this would help anyone with motor skill limitations, it also respects the stress and anxiety that emergency situations can cause. It is intended to make navigation easier for anyone who needs to use this resource.</li>
         </ul>
-        <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="500" height="800" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2Fj1QQmyXGMVPFBajtb1gOXL%2FSTEPS_Capstone%3Fpage-id%3D0%253A1%26type%3Ddesign%26node-id%3D25-27%26viewport%3D159%252C490%252C0.14%26t%3DHUf3LXkGWLYEzrnl-1%26scaling%3Dscale-down%26starting-point-node-id%3D1%253A2%26mode%3Ddesign" allowfullscreen></iframe>
         <h3>Pulling it all together</h3>
         <p>Because of our global advancements in technology and the expansive reach of the internet, there is an opportunity to create immediate access to life-saving information. With the use of a diagnostic app or website, even if they have had no first aid training at all, individuals can render aid. If it is tied to a QR code and prominently displayed on a first aid kit, in a crisis, bystanders can start treatment before first responders arrive.
             At this point STEPS is presented as a mobile-responsive website prototype alongside a QR code printed on a placard. In case the user has no internet access, there are instructions for how to apply a tourniquet inside the placard. The images and instructions come directly from a Stop The Bleed poster that was produced by the Department of Homeland Security with edits for brevity and clarity. This project is only meant to be the foundational underpinnings of a larger undertaking. </p>
+        <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="500" height="800" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2Fj1QQmyXGMVPFBajtb1gOXL%2FSTEPS_Capstone%3Fpage-id%3D0%253A1%26type%3Ddesign%26node-id%3D25-27%26viewport%3D159%252C490%252C0.14%26t%3DHUf3LXkGWLYEzrnl-1%26scaling%3Dscale-down%26starting-point-node-id%3D1%253A2%26mode%3Ddesign" allowfullscreen></iframe>
+       
         </div>
         </section>
 </div>
