--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <img src="img/layout_full.jpg" alt="Placard Layout">
             <figcaption>Figure 3.B QR Placard with Instructions</figcaption>
         </figure>
-        <p>We have a real opportunity to address crisis with smart phones, but just because the technology exists does not mean that we all have equal access to it. Our own individual circumstances frame how we interact with technology and the world as a whole. In an emergency, there are different factors that should be considered to make sure that this resource can reach the widest possible demographic.</p>
+        <p>With contemporary technology, we have the ability to address crisis with smart phones, but just because the technology exists does not mean that we all have equal access to it. Our own individual circumstances frame how we interact with technology and the world as a whole. In an emergency, there are different factors that should be considered to make sure that this resource can reach the widest possible demographic.</p>
         <ul>
             <li><h4>A Simple Color Scheme:</h4> The lack of distraction will allow the user to focus on the task at hand as much as possible. The colors chosen meet <a href="https://webaim.org/resources/contrastchecker/">WebAim's</a> WCAG AAA standards for readability and will allow users with visual disabilities to more easily understand graphics and read text.</li>
             <li><h4>Clear, Concise Text:</h4> 130 million American adults lack a basic reading proficiency, reading at or less than a 6th grade level.<sup>8</sup> Somewhere between 5 and 15% of the American population (or between 14.5 and 43.5 million people) suffer from dyslexia.<sup>9</sup> Instructions have been written with simple language in Proxima Nova, an ADA compliant typeface.</li>
@@ -102,7 +102,7 @@
         </ul>
         <h3>Pulling it all together</h3>
         <p>Because of our global advancements in technology and the expansive reach of the internet, there is an opportunity to create immediate access to life-saving information. With the use of a diagnostic app or website, even if they have had no first aid training at all, individuals can render aid. If it is tied to a QR code and prominently displayed on a first aid kit, in a crisis, bystanders can start treatment before first responders arrive.
-            At this point STEPS is presented as a mobile-responsive website prototype alongside a QR code printed on a placard. In case the user has no internet access, there are instructions for how to apply a tourniquet inside the placard. The images and instructions come directly from a Stop The Bleed poster that was produced by the Department of Homeland Security with edits for brevity and clarity. This project is only meant to be the foundational underpinnings of a larger undertaking. </p>
+            At this point STEPS is presented as a mobile-responsive website prototype alongside a QR code printed on a placard. In case the user has no internet access, there are instructions for how to apply a tourniquet inside the placard. I am hopeful that this project will grow in the future, but for now this website will house the research, citations, and prototypes for future consideration. </p>
        
         </div>
         </section>
@@ -115,7 +115,19 @@
 
 <div class="footer_container">
 <footer>
-    <p>BRIAN VOLLNER&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;MCAD CAPSTONE&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;SUMMER 2023</p>
+    <div>
+    <nav><ul class="nav">
+        <div class="menu">
+        <li class="nav_list"><a class="nav" href="doc/bvollner_researchPlan.pdf" target="_blank" alt="Research Plan">RESEARCH</a></li>
+        <li class="nav_list"><a class="nav" href="doc/STEPS_citations.pdf" target="_blank" alt="Citations">CITATIONS</a></li>
+        <li class="nav_list"><a class="nav" href="https://vollnerb.wixsite.com/capstoneprogress" target="_blank" alt="Blog">BLOG</a></li>
+        <li class="nav_list"><a class="nav" href="doc/STEPS_QRplacard_final.pdf" target="_blank" alt="Placard">PLACARD</a></li>
+        <li class="nav_list"><a class="nav" href="https://www.figma.com/proto/j1QQmyXGMVPFBajtb1gOXL/STEPS_Capstone?page-id=0%3A1&type=design&node-id=613-112&viewport=154%2C447%2C0.14&t=9ADP6bj7jIFErNqK-1&scaling=scale-down&starting-point-node-id=1%3A2&mode=design" target="_blank" alt="Prototype">PROTOTYPE</a></li>
+    </div>
+    </ul></nav>
+        
+    <p id="footer_text">BRIAN VOLLNER&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;MCAD CAPSTONE&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;SUMMER 2023</p>
+</div>
 </footer>
 </div>
 </body>
